--- a/package.json
+++ b/package.json
@@ -10,14 +10,26 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@portabletext/react": "^2.0.1",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.0.0",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "get-youtube-id": "^1.0.1",
     "next": "13.1.6",
+    "next-sanity": "^4.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-youtube": "^10.1.0",
+    "sanity": "^3.0.0",
+    "sanity-plugin-media": "^2.0.5",
+    "styled-components": "^5.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@sanity/eslint-config-studio": "^2.0.1"
   }
 }
