--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@sanity/eslint-config-studio": "^2.0.1"
+    "@sanity/eslint-config-studio": "^2.0.1",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6"
   }
 }
