--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
+    "eslint-config-next": "^13.2.1",
     "get-youtube-id": "^1.0.1",
-    "next": "13.1.6",
+    "next": "^13.2.1",
     "next-sanity": "^4.1.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-youtube": "^10.1.0",
     "sanity": "^3.0.0",
     "sanity-plugin-media": "^2.0.5",
