--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "get-youtube-id": "^1.0.1",
     "next": "^13.2.1",
     "next-sanity": "^4.1.2",
+    "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-youtube": "^10.1.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
+    "@types/nodemailer": "^6.4.7",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6"
